# yolofd

./: CNAME  Cargo.toml  README.md  search-index.js  settings.html  source-files.js
.github/workflows/: docs.yml
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: lib.rs
src/yolofd/: lib.rs.html
yolofd/: all.html  fn.generate_boundary.html  index.html  sidebar-items.js  struct.Field.html  struct.FieldBuilder.html  struct.FormData.html
